# video-processing

./: CMakeLists.txt
exalidraw/: demo.excalidraw
src/: load_frame.cpp  main.cpp
